# arxiv_parser

./: .env.example  README.md  create_demo_data.py  pyproject.toml  requirements.txt
configs/: baseline.yaml  config.yaml  production.yaml
data/: app.db  demo_dataset.parquet  sample_prediction.parquet  test_dataset.parquet
src/: arxiv_analyzer.py  arxiv_client.py  citation_config.py  citation_models.py  config.py  db.py  mailer.py  main.py  openalex_client.py  scoring.py  summarizer.py
src/arxiv_cite_forecast/: utils.py
src/arxiv_cite_forecast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/arxiv_cite_forecast/api/: __init__.py  app.py
src/arxiv_cite_forecast/cli/: __init__.py  build_dataset.py  predict.py  predict_advanced.py  train.py  train_advanced.py
src/arxiv_cite_forecast/data/: __init__.py  arxiv_client.py  dataset.py  openalex_client.py
src/arxiv_cite_forecast/embeddings/: __init__.py  encoder.py
src/arxiv_cite_forecast/eval/: __init__.py  metrics.py
src/arxiv_cite_forecast/explain/: __init__.py  shap_utils.py
src/arxiv_cite_forecast/features/: __init__.py  meta.py  text.py
src/arxiv_cite_forecast/graph/: __init__.py  features.py
src/arxiv_cite_forecast/ranking/: __init__.py  models.py
templates/: digest.html
tests/: test_features.py  test_sanity.py
ui/: streamlit_app.py
web/: package-lock.json  package.json  tsconfig.json  vercel.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/subscribe/: route.ts
web/app/api/subscribers/: route.ts
web/app/api/unsubscribe/: route.ts
